@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: imap4.h,v $
-// Revision      : $Revision: 1.1 $
-// Revision date : $Date: 2004/10/06 13:21:57 $
+// Revision      : $Revision: 1.2 $
+// Revision date : $Date: 2004/11/16 13:26:36 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -38,12 +38,17 @@
 
 class Imap4 : public Mailbox {
 
+private:
+	std::string tag_;
+	guint tagcounter_;
 protected:
 	class Socket *			socket_;
 	std::vector<int>		saved_;
 	std::string parse_bodystructure (std::string, gint &,
 									 gboolean toplevel=true);
-
+	void reset_tag();
+	std::string tag();
+	gint send(std::string,gboolean debug=true);
 public:
 	/* Base */
 	Imap4 (class Biff *owner);
